# zorzak

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
zorzak/: main.py
zorzak/common/: files.py  observer.py  threaded_output.py
zorzak/common/renderer/: __init__.py  snakeviz.py
zorzak/dashboard/: app.py
