[project]
name = "zorzak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "loguru>=0.7.2",
    "panel>=1.5.0",
    "pydantic>=2.9.2",
    "snakeviz>=2.2.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
    "watchfiles>=0.24.0",
]
